update to internal commit c9fe17cc

--- a/programming/javascript/upgrade-guide/10to11.md
+++ b/programming/javascript/upgrade-guide/10to11.md
@@ -9,20 +9,9 @@ permalink: /programming/javascript/upgrade-guide/10to11.html
 
 # How to Upgrade DBR-JS from v10.x to v11.x
 
-## Change the way to reference the SDK
+## Reference the latest version of the dynamsoft-barcode-reader-bundle
 
-In version 10.0.21 and earlier versions, you may need to reference several modules:
-
-```html
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-core@3.0.20/dist/core.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-license@3.0.20/dist/license.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-utility@1.0.20/dist/utility.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader@10.0.20/dist/dbr.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-capture-vision-router@2.0.20/dist/cvr.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/dynamsoft-camera-enhancer@4.0.1/dist/dce.js"></script>
-```
-
-For versions after 10.0.21 but before 11.x, you only need to update the version number of `dynamsoft-barcode-reader-bundle`.
+To use version 11, include the following script in your HTML:
 
 ```html
 <script src="https://cdn.jsdelivr.net/npm/dynamsoft-barcode-reader-bundle@11.0.3000/dist/dbr.bundle.js"></script>
@@ -79,6 +68,8 @@ The Dynamsoft Barcode Reader JavaScript edition has been refactored to integrate
 * [Overview of Dynamsoft Capture Vision](https://www.dynamsoft.com/capture-vision/docs/core/introduction/)
 * [Dynamsoft Capture Vision Framework Details](https://www.dynamsoft.com/capture-vision/docs/core/architecture/)
 
-Additionally, it's important to note that Dynamsoft's ongoing enhancements will be based on this updated architecture. By upgrading to version 11, you will gain access to the latest features and enhanced performance.
+> [!IMPORTANT]
+> 
+> Dynamsoft’s ongoing feature development is based on the new DCV architecture. By upgrading to v11, you’ll gain access to improved performance and new capabilities.
 
-Due to these significant changes, a substantial rewrite of your existing code will be necessary to transition to the new version. we recommend you to follow the [User Guide](https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/user-guide/barcode-scanner.html) and re-write your codes.
+Due to the architectural changes, **a significant rewrite of your existing code is required**. we recommend you to follow the [User Guide](https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/user-guide/barcode-scanner.html) and re-write your codes.
