update to internal commit a9b578a0

--- a/programming/javascript/release-notes/js-11.md
+++ b/programming/javascript/release-notes/js-11.md
@@ -10,7 +10,7 @@ noTitleIndex: true
 
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
-## 11.0.6000 (08/00/2025)
+## 11.0.6000 (08/14/2025)
 
 ### New
 
@@ -29,7 +29,7 @@ noTitleIndex: true
 
 ### Fixed
 
-Fixed various minor bugs and improved overall stability.
+- Fixed various minor bugs and improved overall stability.
 
 ## 11.0.3000 (07/09/2025)
 
