update to internal commit d4f2d79c

--- a/programming/javascript/release-notes/js-11.md
+++ b/programming/javascript/release-notes/js-11.md
@@ -10,6 +10,69 @@ noTitleIndex: true
 
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
+## 11.2.2000 (10/30/2025)
+
+### ✨ Key Highlights
+#### AI-Powered Barcode Detection and Decoding
+
+- New Localization Models – Introduces [`OneDLocalization`]({{ site.dcvb_parameters }}barcode-reader-task-settings/localization-modes.html#modelnamearray) and [`DataMatrixQRCodeLocalization`]({{ site.dcvb_parameters }}barcode-reader-task-settings/localization-modes.html#modelnamearray) neural network models for improved detection of **blurred / low-resolution 1D codes**, or **partially damaged DataMatrix/QR codes**.
+- Specialized Decoders – Adds [`EAN13Decoder`]({{ site.dcvb_parameters }}barcode-reader-task-settings/deblur-modes.html#modelnamearray) and [`Code128Decoder`]({{ site.dcvb_parameters }}barcode-reader-task-settings/deblur-modes.html#modelnamearray) models optimized for **long-distance** and **motion-blurred** decoding scenarios.
+- Redesigned Deblur Model – The [`OneDDeblur`]({{ site.dcvb_parameters }}barcode-reader-task-settings/deblur-modes.html#modelnamearray) model now provides more effective recovery from **motion and focus blur**.
+- Configurable Model Selection – The new `ModelNameArray` parameter supports flexible model loading and fine-grained control for specific barcode types.
+
+#### Precision and Processing Control
+
+- Enhanced Deblur Methods – [`DM_DEEP_ANALYSIS`]({{ site.dcvb_parameters }}barcode-reader-task-settings/deblur-modes.html#dm_deep_analysis) now includes sub-level control with `OneDGeneral`, `TwoDGeneral`, and `EAN13Enhanced` options.
+- Barcode Count Expectation – The new [`ExpectedBarcodesCount`]({{ site.dcvb_parameters }}barcode-format-specification/expected-barcodes-count.html) parameter enables **format-specific quantity control** and **early termination** in fixed-count workflows.
+- Improved Region Detection – The new [`RPM_GRAY_CONSISTENCY`]({{ site.dcvb_parameters }}image-parameter/region-predetection-modes.html#rpm_gray_consistency) mode provides more precise region extraction based on **grayscale uniformity** and **local consistency** for document and label processing.
+
+### Performance Highlights
+
+- Up to **26.5%** higher read rates under blur conditions with as much as **44%** faster processing.
+- Reliable decoding of DataMatrix and QR codes with missing or damaged finder patterns.
+- Extended operational range beyond 75 cm for long-distance barcode scanning.
+
+### Developer Notes
+
+- Backward Compatibility – Fully compatible with existing integrations; no code-level changes required for upgrade.
+- Configuration Flexibility – Expanded parameter set allows comprehensive model configuration for scenario-specific tuning.
+- Production Stability – All new models validated in enterprise environments.
+
+#### Updates for [BarcodeScanner](https://dynamsoft.com/barcode-reader/docs/web/programming/javascript/api-reference/barcode-scanner.html)
+
+- In **single** mode, if the target barcode is not found among the candidates, there is now an opportunity to rescan.  
+  <img src="../assets/return-button.png" style="display: block; margin: 0 auto;"/>
+- Fixed an issue where the barcode location could be inaccurate in certain cases.  
+- Fixed a problem where, in specific cases when the camera was occupied, the video stream could not be displayed correctly.  
+- Other known issues fixed.  
+
+#### Engineering Optimizations
+
+- Optimized the parallel download logic to improve resource loading speed.  
+- Optimized [adaptive WASM loading logic](../faq/adaptive-wasm-loading.md) to further enhance performance in modern browser environments.  
+
+### API Changes
+
+#### New
+
+- Added the `switchCapturingTemplate()` method to the `CaptureVisionRouter` class to enable switching the active capturing template during the image processing workflow. 
+- Added methods `toBlob()`, `toImage()`, and `toCanvas()` to the `originalImageResultItem` interface for flexible image data conversion.
+- Added the `SetGlobalIntraOpNumThreads()` method to the `CaptureVisionRouter` class to configure the global thread count for model inference.  
+- Added the `clearDLModelBuffers()` method to the `CaptureVisionRouter` class to manually release memory occupied by loaded models.  
+- Added callback functions `onSpecLoadProgressChanged()` and `onWasmLoadProgressChanged()` to monitor resource loading progress.  
+- Added the `convertToContainCoordinates()` method to the `CameraEnhancer` class to convert coordinates from `fit: cover` to `fit: contain` mode.  
+- Added the `LM_NEURAL_NETWORK` enumeration to `EnumLocalizationMode`.  
+
+#### Updated
+
+- Changed the default value of `MaxThreadsInOneTask` from **4** to **0**.  
+- Changed the default value of `IncludeTrailingCheckDigit` from **1** to **0**.  
+
+#### Deprecated
+
+- Deprecated the `DeblurModelNameArray` argument in the `DeblurModes` parameter. Use `ModelNameArray` instead.  
+- Deprecated the `appendModelBuffer()` method in the `CaptureVisionRouter` class. Use `appendDLModelBuffer()` instead.  
+
 ## 11.0.6000 (08/14/2025)
 
 ### New
