--- a/programming/javascript/release-notes/js-11.md
+++ b/programming/javascript/release-notes/js-11.md
@@ -10,6 +10,12 @@ noTitleIndex: true
 
 # Release Notes for Dynamsoft Barcode Reader JavaScript SDK
 
+## 11.2.4000 (11/11/2025)
+
+### Fixed
+
+- Fixed a bug that could cause a crash when using model localization with a 2D barcode.
+
 ## 11.2.2000 (11/04/2025)
 
 ### ✨ Key Highlights
