--- a/programming/javascript/upgrade-guide/10to11.md
+++ b/programming/javascript/upgrade-guide/10to11.md
@@ -59,7 +59,7 @@ Dynamsoft.Core.CoreModule.engineResourcePaths.rootDirectory = "https://cdn.jsdel
 
 ### Upgrade your template
 
-The template system is upgraded. The template you used for the previous version can’t be directly recognized by the new version. Please use the [template upgrade tool](https://www.dynamsoft.com/tools/template-upgrade/) to upgrade your template.
+The template system is upgraded. The template you used for the previous version can't be directly recognized by the new version. Please use the [template upgrade tool](https://www.dynamsoft.com/tools/template-upgrade/) to upgrade your template.
 
 ## From version 9.x or earlier
 
@@ -70,6 +70,6 @@ The Dynamsoft Barcode Reader JavaScript edition has been refactored to integrate
 
 > [!IMPORTANT]
 > 
-> Dynamsoft’s ongoing feature development is based on the new DCV architecture. By upgrading to v11, you’ll gain access to improved performance and new capabilities.
+> Dynamsoft's ongoing feature development is based on the new DCV architecture. By upgrading to v11, you'll gain access to improved performance and new capabilities.
 
 Due to the architectural changes, **a significant rewrite of your existing code is required**. we recommend you to follow the [User Guide](https://www.dynamsoft.com/barcode-reader/docs/web/programming/javascript/user-guide/barcode-scanner.html) and re-write your codes.
